# agents

./: .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.py  builder.example.yaml  crontab  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
builder_agent/: __init__.py
builder_agent/adapters/execution/: base.py  claude_cli.py  factory.py  (+1 more)
builder_agent/core/: command.py  config.py  exceptions.py  logging.py  models.py  retry.py
builder_agent/orchestration/: lifecycle.py
builder_agent/services/: generator.py  release.py  runtime_validation.py  spec_loader.py  upgrade.py
config/: openclaw.json  openclaw.json.bak.1  openclaw.json.bak.2
deploy/systemd/: builder-healthcheck.service  builder-healthcheck.timer  openclaw-builder.service
examples/: aivar-scheduler.yaml  lina-pm-agent.yaml  new-agent.yaml
generated_agents/lina-pm-agent/: README.md
generated_agents/scheduler/: README.md
proxy/: Caddyfile
scripts/: aivar-gog-bootstrap.sh  bootstrap_doppler_builder.sh  migrate-to-user-services.sh  openclaw-healthcheck.sh  openclaw-prestart-port.sh  openclaw-startup-check.py  run_builder.py  test-gateway-external.sh
skills/builder/: SKILL.md
skills/doppler/: SKILL.md
tests/: test_generator.py  test_semver.py
workspace/: AGENTS.md  AIVAR_EMAIL_SPAM_FIX.md  CLAUDE_CONTEXT_LOG.md  GATEWAY_UI_FIX.md  IDENTITY.md  MEMORY.md  OAUTH_PATTERN.md  SECURITY.md  SECURITY_IMPLEMENTATION.md  SECURITY_OVERRIDE_PROTOCOL.md  SUBAGENT_PROTOCOL.md  TOOLS.md  USER.md  USER_SERVICES_MIGRATION.md
workspace/memory/: 2026-03-06.md
(+23 files in other folders)
